--- a/codefresh.yml
+++ b/codefresh.yml
@@ -1,6 +1,7 @@
 version: "1.0"
 stages:
   - "clone"
+  - "lint"
   - "test"
   - "build"
 steps:
@@ -10,6 +11,14 @@ steps:
     repo: "${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}"
     revision: "${{CF_BRANCH}}"
     stage: "clone"
+  perform-linting:
+    image: node:12.14.0-alpine3.11
+    working_directory: "${{main_clone}}"
+    description: "Performing linting..."
+    commands:
+      - npm install
+      - npm run lint
+    stage: "lint"
   perform-tests:
     image: node:12.14.0-alpine3.11
     working_directory: ${{main_clone}}
